[tool.poetry]
name = "pita"
version = "0.1.0"
description = "An alternative client for \"Сетевой Город. Образование\""
authors = ["megahomyak <g.megahomyak@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
fastapi = "0.85.1"
netschoolapi = "8.0.0"
pydantic = "1.10.2"
SQLAlchemy = "1.4.43"
uvicorn = "0.19.0"
Jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
